solve problem of bubble z-index

--- a/src/style/components/sections/_header.scss
+++ b/src/style/components/sections/_header.scss
@@ -4,10 +4,10 @@
 
   .header-content {
     display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
     .myself{
       width: 100%;
       height: 50vh;
@@ -32,6 +32,10 @@
         
         a{
           color: $color-1;
+
+          &:hover{
+            transform: scale(1.1);
+          }
         }
         
         i {
